# Boolean

./: CMakeLists.txt  README.md
Boolean/: drawbbox.py  drawpoints2d.py  main.cpp  triangle2d.csv
Model/: output.vtk
doc/: 三角形相交计算原理.md  布尔运算原理.md  问题以及解决方法.md
doc/boolean/: pointInMesh.pptx
doc/tri_tri_intersect/: tri_tri_intersect.pptx
doc/voronoiCutter/: cut.py  voronoi切割原理.md
src/: vec.h
src/Boolean/: BooleanTriangleMesh.h  FAccelerator.cpp  FAccelerator.h  FBoundingBox.h  FGeometryCollection.cpp  FGeometryCollection.h  FKDTree.h  FMeshCutter.cpp  FMeshCutter.h  FOctree.cpp  FOctree.h  FPerlinNoise.cpp  FPerlinNoise.h  FSiteGenerator.cpp  FSiteGenerator.h  FVoronoi3D.cpp  FVoronoi3D.h  IntersectUtils.h  tri_tri_intersect.cpp  tri_tri_intersect.h
test/: main.cpp  packages.config  test.vcxproj  test.vcxproj.filters
